@@ -1,8 +1,5 @@
 # Regression test specification for the r800 target running with uCsim
 
-# simulation timeout in seconds
-SIM_TIMEOUT = 50
-
 EMU_PORT_FLAG = -tR800
 
 # path to uCsim
